--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
-{	"name": "Savostytskyi/project",
+{	"name": "savostytskyi/project",
 	"version":"master",
 	"repositories": [
 		{
 			"type" : "vcs",
-			"url" : "https://github.com/savostytskyi/comp_class"
+			"url" : "https://github.com/Savostytskyi/comp_class.git"
 		}
 	],
 	"autoload": {
